--- a/manuscript/coverletter.tex
+++ b/manuscript/coverletter.tex
@@ -47,16 +47,16 @@
 
 \opening{Dear Prof. Freckleton:}
 
-    My co-authors and I are pleased to submit the attached manuscript \emph{A quantitative framework for investigating the reliability of empirical network construction} for consideration as a research article in \textbf{Methods in Ecology and Evolution}. The goals of this manuscript are A) to illustrate the extreme difficulty in fully sampling the set of interactions occurring within a community, B) to demonstrate the construction of networks treating each interaction probabilistically (based on prior information as well as available data), and C) to offer concrete recommendations that will facilitate the use of this framework in future work.
+    My co-authors and I are pleased to submit the attached manuscript \emph{A quantitative framework for investigating the reliability of empirical network construction} for consideration as a research article in \textbf{Methods in Ecology and Evolution}. The goals of this manuscript are to demonstrate the extreme difficulty of observing all interactions that occur within a community and, given this difficulty, to illustrate a framework for combining prior knowledge about the system with observed data in order to gauge the probability of interactions which were not observed. We close by offering concrete recommendations that will facilitate researchers' efforts to acknowledge and set bounds on the uncertainty inherent in ecological data.
 
 
-    We argue that, because of multiple levels of uncertainty surrounding interactions between species, the set of observed interactions will almost certainly be a subset of the interactions that can occur in a community. Some interactions may be rare because of species traits (e.g., prey that are only consumed by the largest individuals of a predator species), others may be difficult to detect because they occur under conditions not conducive to sampling (e.g., during inclement weather or at night), and yet other interactions may be common but very difficult to detect (e.g., interactions involving species that are highly cryptic). We emphasise that some of these sources of uncertainty can be reduced with increased sampling but that, because it is easier to observe species than interactions between species, increased sampling will tend to add more unobserved than observed interactions to a matrix. We illustrate the problem using an extensively-sampled, spatially-replicated \emph{Salix}-galler-natural enemy system (Kopelke \emph{et al.}, 2017. \textbf{Ecology} 98: 1730).
+    We argue that, because of multiple levels of uncertainty surrounding interactions between species, the set of observed interactions will almost certainly be a subset of the interactions that can occur in a community. Interactions may not be observed because a species is rare and does not encounter its partner during sampling, because environmental constraints prohibit the interaction during sampling, because one or both species is difficult to observe in the field, or because the interaction truly does not occur. We emphasise that some of these sources of uncertainty can be reduced with increased sampling but that, because it is easier to observe species than interactions between species, increased sampling will tend to add more unobserved than observed interactions to a matrix. We illustrate the problem using an extensively-sampled, spatially-replicated \emph{Salix}-galler-natural enemy system (Kopelke \emph{et al.}, 2017. \textbf{Ecology} 98: 1730).
 
 
-    With extensive sampling being time- and resource-intensive and not a complete solution to the problems posed by interaction uncertainty, we suggest that researchers instead treat interactions probabilistically and incorporate prior information to set bounds on the probability of interaction between species that were not observed interacting. As mentioned above, a lack of observed interaction could have several causes and does not necessarily imply that the interaction truly does not occur. We demonstrate a simple Bayesian framework, including the selection of a prior distribution, and use it to predict the likely set of feasible interactions in our example \emph{Salix} system. Based on this framework, we close with a set of recommendations for both empiricists and theoreticians that should improve our ability to deal with the uncertainty inherent in ecological networks and compare networks across systems.
+    In many cases, it will not be feasible to sample all species pairs intensively enough (tens of observations per pair) to be confident that the pair does not interact. Given the time and resource constraints that often restrict fieldwork, we suggest that researchers supplement observed data with prior information about the system. Thus, they can set bounds on the probability of interaction between species that were not observed interacting. We demonstrate this simple Bayesian framework, including the selection of a prior distribution, and use it to predict the likely set of feasible interactions in our example \emph{Salix} system. Based on this framework, we close with a set of recommendations for both empiricists and theoreticians that should improve our ability to deal with the uncertainty inherent in ecological networks and compare networks across systems.
 
 
-    We are aware that there are several studies already using various forms of Bayesian networks to treat interactions as probabilities. These efforts have, however, so far remained confined to fairly theoretical work. We believe that empirical ecologists will also find Bayesian networks a useful tool when planning field sampling and when describing and analysing their focal communities. Our goal with this manuscript is, therefore, to introduce a Bayesian line of thought in as approachable and broadly-applicable terms as possible. To that end, we provide simple R code that illustrates each step of our approach. 
+    We are aware that there are several studies already using various forms of Bayesian networks to treat interactions as probabilities. These efforts are, however, generally confined to fairly theoretical work. We believe that empirical ecologists will find Bayesian interaction probabilities to be a useful tool when planning field sampling and when describing and analysing their focal communities. Our goal with this manuscript is, therefore, to introduce a Bayesian line of thought in as approachable and broadly-applicable terms as possible. To that end, we provide simple R code that illustrates each step of our approach. 
 
 
     We hope that the general nature of uncertainty around interactions, as well as the broadly-applicable solution we offer, will be of interest to the readership of \textbf{Methods in Ecology and Evolution}. We are confident that our worked example and easy-to-use scripts will provide a useful template for empiricists and theoreticians alike. We hope that you agree and eagerly await your reply.
@@ -74,10 +74,10 @@
 % Pedro Jordano pedroj@me.com Estacion Biologica de Donana CSIC
 % Phillip Staniczenko pstaniczenko@sesync.org National Socio-Environmental Synthesis Center (SESYNC) 
 % Louis-Félix Bersier louis-felix.bersier@unifr.ch Université de Fribourg
-% Paolo Guimaraes
-% Jason Tylianakis
+% Paolo Guimaraes 
+% Jason Tylianakis jason.tylianakis@canterbury.ac.nz :)
 % ask Tomas for empiricists
-% Owen Petchey
+% Owen Petchey University of Zurich owen.petchey@ieu.uzh.ch
 
 
 % Extra suggestion
