changed SI axes labels

--- a/manuscript/CI_interactions.tex
+++ b/manuscript/CI_interactions.tex
@@ -321,7 +321,7 @@ All data used in this study have been independently published and are accessible
 \end{spacing}
 \clearpage
 
-\captionsetup{singlelinecheck=false, font={stretch=2}}
+\captionsetup{singlelinecheck=false, font={stretch=1}}
 
 \section*{Figures}
 
@@ -332,7 +332,7 @@ All data used in this study have been independently published and are accessible
     \indent After applying these three layers of uncertainty, some interactions which truly occur are very unlikely to be observed. The observed matrix (lower right) is a subsample of the true matrix, with the probability of observing each interaction depending on the interaction, process, and detection uncertainty associated with it. Note that some low-probability interactions (e.g., lion predation on zebra) are included while others (e.g., lion predation on elephants) are not. For an illustration of the way in which these levels of uncertainty combine in simulated data, and the effects of uncertainty on network structure, see \emph{Appendix S1}.}
     \label{conceptual_fig}
     \begin{center}
-    % \includegraphics*[height=.5\textheight]{figures/conceptual_fig.eps}
+    \includegraphics*[height=.5\textheight]{figures/conceptual_fig.eps}
     \end{center}
     \end{figure}
 
