--- a/manuscript/manual_abbrev.bib
+++ b/manuscript/manual_abbrev.bib
@@ -2,9 +2,18 @@
 author={Jensen, J. L. W. V. },
 journal={Acta Math},
 volume={30},
-pages={175-193},
+pages={175--193},
 year={1906},
 title={Sur les fonctions convexes et les in{\'{e}}galit{\'{e}}s entre les valeurs moyennes},
+}
+@article{Morris2014,
+author={Morris, R. J. and Gripenberg, Sofia and Lewis, Owen T. and Roslin, Tomas},
+journal={Ecol Lett},
+volume={17},
+pages={340--349},
+title={Antagonistic interaction networks are structured independently of latitude and host guild},
+doi={10.1111/ele.12235},
+year={2014}
 }
 @article{Cohen2009,
 author = {Cohen, J. E. and Schittler, D. N. and Raffaelli, D. G. and Reuman, D. C.},
