fixed a figure ref

--- a/manuscript/CI_interactions.tex
+++ b/manuscript/CI_interactions.tex
@@ -141,7 +141,7 @@ ecological networks; probabilistic interactions; Bayesian networks; sampling err
 
     \subsection*{Why do some interactions \emph{not} occur?}
 
-      We start from the perspective of a community ecologist faced with the task of describing a previously unknown interaction network. This ecologist will be interested in generating a description of the species/nodes present and the links between them~\citep{Roslin2016}.  Importantly, the information sought is conveyed by both the presence and \emph{absence} of links. Presences and absences are not, however, equally certain. An observed link definitely occurred, but there are multiple reasons why a given link may not be observed \emph{whether or not the interaction truly occurred}. The detection of any interaction is a stochastic process. We define three nested levels of uncertainty contributing to this stochasticity: interaction uncertainty, process uncertainty, and detection uncertainty (Fig.~\ref{concept_fig}).
+      We start from the perspective of a community ecologist faced with the task of describing a previously unknown interaction network. This ecologist will be interested in generating a description of the species/nodes present and the links between them~\citep{Roslin2016}.  Importantly, the information sought is conveyed by both the presence and \emph{absence} of links. Presences and absences are not, however, equally certain. An observed link definitely occurred, but there are multiple reasons why a given link may not be observed \emph{whether or not the interaction truly occurred}. The detection of any interaction is a stochastic process. We define three nested levels of uncertainty contributing to this stochasticity: interaction uncertainty, process uncertainty, and detection uncertainty (Fig.~\ref{conceptual_fig}).
 
 
         \subsubsection*{Interaction uncertainty} 
@@ -321,7 +321,7 @@ All data used in this study have been independently published and are accessible
 \end{spacing}
 \clearpage
 
-\captionsetup{singlelinecheck=false, font={stretch=1}}
+\captionsetup{singlelinecheck=false, font={stretch=2}}
 
 \section*{Figures}
 
@@ -332,7 +332,7 @@ All data used in this study have been independently published and are accessible
     \indent After applying these three layers of uncertainty, some interactions which truly occur are very unlikely to be observed. The observed matrix (lower right) is a subsample of the true matrix, with the probability of observing each interaction depending on the interaction, process, and detection uncertainty associated with it. Note that some low-probability interactions (e.g., lion predation on zebra) are included while others (e.g., lion predation on elephants) are not. For an illustration of the way in which these levels of uncertainty combine in simulated data, and the effects of uncertainty on network structure, see \emph{Appendix S1}.}
     \label{conceptual_fig}
     \begin{center}
-    \includegraphics*[height=.5\textheight]{figures/conceptual_fig.eps}
+    % \includegraphics*[height=.5\textheight]{figures/conceptual_fig.eps}
     \end{center}
     \end{figure}
 
