--- a/manuscript/CI_interactions.tex
+++ b/manuscript/CI_interactions.tex
@@ -119,7 +119,7 @@ alyssa.cirtwill@gmail.com\\
 
 ecological networks; probabilistic interactions; Bayesian networks; sampling error; spatial variability; temporal variability; uncertainty
 
-\linenumbers
+% \linenumbers
 \clearpage
 
 \section*{Introduction}
