added preprint doi to the coverletter

--- a/manuscript/coverletter.tex
+++ b/manuscript/coverletter.tex
@@ -59,6 +59,9 @@
     As our central approach to this topic, we use a simple Bayesian framework. We are aware that there are several studies already using various forms of Bayesian networks to treat interactions as probabilities. These efforts are, however, generally confined to fairly theoretical work. We believe that empirical ecologists will find Bayesian interaction probabilities to be a useful tool when planning field sampling and when describing and analysing their focal communities. Our goal with this manuscript is, therefore, to introduce a Bayesian line of thought in as approachable and broadly-applicable terms as possible. To that end, we provide simple R code that illustrates each step of our approach. 
 
 
+    We have uploaded an earlier version of this manuscript to biorXiv \\(doi: \emph{https://doi.org/10.1101/332536}). The present version has been substantially re-organized and contains additional material not included in the pre-print.
+
+
     We hope that the general nature of uncertainty around interactions, as well as the broadly-applicable solution we offer, will be of interest to the readership of \textbf{Methods in Ecology and Evolution}. We are confident that our worked example and easy-to-use scripts will provide a useful template for empiricists and theoreticians alike. We hope that you agree and eagerly await your reply.
 
 
