fine-tuned attribution table

--- a/manuscript/supplemental.tex
+++ b/manuscript/supplemental.tex
@@ -83,18 +83,18 @@ alyssa.cirtwill@gmail.com\\
 
   \begin{table}
   \caption{Attributions for silhouette images taken from PhyloPic.org and used in Figure 1 (\emph{main text}). Terms for the CC BY-NC-SA 3.0 license can be found at \emph{https://creativecommons.org/licenses/by-nc-sa/3.0/}. Terms for the CC BY 3.0 license can be found at \emph{https://creativecommons.org/licenses/by/3.0/}.}
-  \begin{tabular}{l|ll}
+  \begin{tabular}{l|l m{10cm}}
   Image & PhyloPic taxon & Attribution \\
   \hline
   Lion & Panthera leo & Public domain (uncredited) \\
   Leopard & Panthera pardus & Lukasiniho (CC BY-NC-SA 3.0; image not changed) \\
   Jackal & Canidae & Brian Gratwicke (photo) and T. Michael Keesey (vectorization). (CC BY 3.0; image not changed) \\
-  Elephant & Loxodonta africana & Jan A. Venter, Herbert H. T. Prins, David A. Balfour & Rob Slotow (vectorized by T. Michael Keesey) (CC BY 3.0; image not changed) \\
+  Elephant & Loxodonta africana & Jan A. Venter, Herbert H. T. Prins, David A. Balfour \& Rob Slotow (vectorized by T. Michael Keesey) (CC BY 3.0; image not changed) \\
   Zebra & Equus quagga & Cathy (CC BY-NC-SA 3.0; image not changed) \\
   Impala & Aepyceros melampus & Public domain (unknown author) \\
   Hare & Leporidae & Sarah Werning (CC A 3.0; image not changed) \\
-  Acacia & Acacia tree & Mattia Menchetti (public domain) \\
-  Grass & \multicolumn{2}{c}{Not sourced from PhyloPic. Public domain.} \\
+  Acacia & Acacia & Mattia Menchetti (public domain) \\
+  Grass & & Not sourced from PhyloPic. Public domain. \\
   \hline
   \end{tabular}
   \end{table}
