roughing out a box all about sampling

--- a/manuscript/CI_interactions.tex
+++ b/manuscript/CI_interactions.tex
@@ -323,6 +323,23 @@ All data used in this study have been independently published and are accessible
 
 \captionsetup{singlelinecheck=false, font={stretch=2}}
 
+\section*{Boxes}
+
+Can't we just sample more?
+
+The obvious solution to the problem of uncertainty in the occurrence and detection of interactions is to increase sampling effort. A high sampling effort will increase the number of observed species and interactions and provide estimates of the interaction probabilities of species which are observed many times. Indeed, an infinitely high sampling effort would reveal the true probabilities of interactions that are detectable using the sampling methodology. Increasing sampling effort does not address the problem of interactions which may be undetectable because one or both species involved is cryptic (as with many parasitoids, which can only be identified using molecular methods~\citep{Carol,Wirta}) or because the interaction occurs at a spatial or temporal scale not considered (can use R's point about brevity of pollination here); unless the increase in sampling effort includes adding detection methods as well as adding sampling periods~\citep{Tomas}. 
+
+
+Such infinite sampling is, of course, impossible. The sampling effort used in a given study is more likely to be constrained by the time and resources available than to be increased until all interactions that ever occur in a system are observed. Given the reality of limited resources for field studies, there are several reasons that sampling alone cannot solve ecology's problem with uncertainty. Note that this is not to say that we should sample \emph{less}. To reduce sampling effort voluntarily would be foolish in the extreme as a lower sampling effort reduces the number of interactions (and non-interactions) that are observed and increases the chance that species will be missed entirely. Rather we assume that researchers are sampling with the maximum effort feasible given constraints on their time, resources, and study systems (e.g., destructive sampling of endangered species may not be permitted even if resources would otherwise allow for such sampling). Under these conditions, some uncertainty will always remain.
+
+First, there is the problem of trade-offs between sampling one site intensively and sampling many sites less thoroughly. Species at a single site are not likely to interact continually (although some interactions, such as parasitism, can be long-term), so a brief sampling window will mean that some interactions do not occur during sampling. Even long-term interactions may not be detected during a brief sampling window if interacting individuals are not among those observed. Sampling a single site intensively, on the other hand, means that interactions which do not occur at the site due to lack of co-occurrance or other factors (e.g., some predator-prey interactions may not occur if the presence of a third species suppresses predator activity). The best way to manage this trade-off will vary with study systems, but in any case finite sampling effort means that some interactions will not be observed due to process or detection uncertainty.
+
+Second, even if we can increase sampling effort, this increased effort will not apply to all species equally. Some species are more common, interact more frequently, or are easier to observe. Given this, increasing sampling effort will give us more information about previously-observed interactions more often than it will reveal previously-unobserved interactions. It is still useful to understand the frequencies of common interactions, but this does not help us to remove "false zeros" from an interaction matrix.
+
+Third, there is the problem that species are added to the network "faster" (relatively speaking) than interactions. If sampling is not sufficient to ensure that all species present have been included (which seems likely except in fairly species-poor systems), the observation of a rare species interacting with some partner will add a single observed interaction (a "one") and many unobserved interactions ("zeros"). Note that the zeros may be true reflections of interactions which do not occur, or they may be "false zeros" reflecting the lack of observations for interactions which do occur. As we accumulate more rare/cryptic/infrequently interacting species in a network, we discover more about what we do not know (i.e., which zeros are "true zeros" and which are not). However, by adding rare species and the disproportionate numbers of unobserved interactions associated with them, increased sampling can \emph{increase} uncertainty around the interaction network. Again, increased sampling, where possible, is not a bad thing because of the increased knowledge about rare species, the interactions we do observe, and the revealing of knowledge gaps. It does not, however, eliminate the problems of uncertainty we focus on here.
+
+
+
 \section*{Figures}
 
   \begin{figure}[h!]
